--- a/wallabag/html-ressources/main.css
+++ b/wallabag/html-ressources/main.css
@@ -14,6 +14,10 @@ html {
   min-height: 100%;
 }
 
+.mbm {
+    display: none;
+}
+
 @media (prefers-color-scheme: dark) {
   body {
       color: #777;
