--- a/App/html-ressources/main.css
+++ b/App/html-ressources/main.css
@@ -14,6 +14,10 @@ html {
   min-height: 100%;
 }
 
+html, body {
+  overscroll-behavior: none;
+}
+
 /* ==========================================================================
    1 = Style Guide
    ========================================================================== */
